# applicant_helper

./: .gitignore  README.md  config.py  conftest.py  main.py  pyproject.toml
exceptions/: table_exceptions.py  vacancy_exceptions.py
models/: my_table.py  vacancy.py
parsers/: __init__.py  hh_parser.py  parser.py  superjob_parser.py
savers/: __init__.py  csv_saver.py  json_saver.py  saver.py
tests/: conftest.py  test_actions.py  test_csv_saver.py  test_json_saver.py  test_vacancy.py
tests/testfiles/: test.csv
utils/: actions.py  safe_request.py  table.py  utils.py
